--- a/css/style.css
+++ b/css/style.css
@@ -598,8 +598,7 @@ ul {
     border: none;
     
     font-size: 16px;
-    line-height: 1.88;
-    align-items: center;
+    line-height: 1.88;    
     text-align: center;
     letter-spacing: 0.06em;
     
@@ -825,8 +824,7 @@ ul {
 .form-label {
     position: relative;
     
-    display: block;
-    
+    display: block;    
 }
 
 .form-label + .form-label {
@@ -857,7 +855,6 @@ ul {
 .form-input:focus-visible {
     outline: 1px solid var(--accent-color);
 }
-
 
 .form-label:focus-within>.form-input,
 .form-label:hover>.form-input {
@@ -894,6 +891,12 @@ ul {
     outline: 1px solid var(--accent-color);
 }
 
+.form-comment::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);;
+}
 
 .form-label:focus-within>.form-comment,
 .form-label:hover>.form-comment {
@@ -901,11 +904,11 @@ ul {
     cursor: pointer;
 }
 
-.form-consent {
-    position: relative;
-    display: block;
-    margin-left: 28px;
-
+.consent-label {
+    display: flex;
+    margin-left: 12px;
+    align-items: center;
+    
     margin-bottom: 30px;
     margin-top: 20px;
         
@@ -917,36 +920,29 @@ ul {
 }
 
 .check-input {
+    position: absolute;    
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-
 }
 
 .check-box {
-    position: absolute;
-    top: 50%;
+    display: inline-block;
     width: 16px;
     height: 15px;
-
-    margin-left: -23px;
-
-    background-color: var(--primary-bg-color);
-    /*background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2222 1.66667V13.3333H1.77778V1.66667H14.2222ZM14.2222 0H1.77778C0.8 0 0 0.75 0 1.66667V13.3333C0 14.25 0.8 15 1.77778 15H14.2222C15.2 15 16 14.25 16 13.3333V1.66667C16 0.75 15.2 0 14.2222 0Z' fill='%23212121'/%3E%3C/svg%3E%0A");*/
-
-    transform: translateY(-50%);
-
-    transition: background-image var(--transition-animation);
+    border: 2px solid var(--second-text-color);
+    border-radius: 2px;
+    margin-right: 7px;
 }
 
-/*.check-input:checked + .check-box,
-.check-input:checked:focus+.check-box {
-   /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' viewBox='0 0 16 15' fill='none'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+.check-input:checked + .check-box {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    border-color: var(--accent-color);
+    background-image: url(../images/check.svg);
+    background-color: var(--accent-color);
 }
-
-.check-input:focus + .check-box {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' viewBox='0 0 16 15' fill='none'%3E%3Cpath d='M14.2222 1.66667V13.3333H1.77778V1.66667H14.2222ZM14.2222 0H1.77778C0.8 0 0 0.75 0 1.66667V13.3333C0 14.25 0.8 15 1.77778 15H14.2222C15.2 15 16 14.25 16 13.3333V1.66667C16 0.75 15.2 0 14.2222 0Z' fill='%232196F3'/%3E%3C/svg%3E");
-}*/
 
 .consent-text {
     font-size: 14px;
@@ -956,6 +952,7 @@ ul {
 
 .consent-link {
     color: var(--accent-color);
+    margin-left: 4px;
 }
 
 .form-button {
